--- a/ORM/Web.config
+++ b/ORM/Web.config
@@ -59,7 +59,4 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-  <connectionStrings>
-    <add name="StrigEntities" connectionString="metadata=res://*/Models.Strig.csdl|res://*/Models.Strig.ssdl|res://*/Models.Strig.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-RHSOBA2\SQLEXPRESS;initial catalog=Strig;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="StrigEntities" connectionString="metadata=res://*/Models.Strig.csdl|res://*/Models.Strig.ssdl|res://*/Models.Strig.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-RHSOBA2\SQLEXPRESS;initial catalog=Strig;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
